# file_randomizer

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: build-release.yml  rust.yml
file_randomizer/: file_randomizer.py
src/: main.rs
