[project]
name = "file-randomizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["appdirs>=1.4.4", "pyside6>=6.9.0"]

[dependency-groups]
dev = [
  "pylsp-rope>=0.1.17",
  "python-lsp-ruff>=2.2.2",
  "python-lsp-server>=1.12.2",
  "pytype>=2024.10.11",
]
build = [
    "pyinstaller>=6.13.0",
]


[project.gui-scripts]
file-randomizer = "file_randomizer.file_randomizer:main"



